add "autofocus" for input

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <div class="main">
-        <div class="table">
+        <!-- <div class="table">
           <table class="multTable" id="table">
             <tr>
               <th>*</th>
@@ -111,19 +111,19 @@
               <td>81</td>
             </tr>
           </table>
-        </div>
+        </div> -->
         <div class="wrapper">
-          <div class="checking">
+          <!-- <div class="checking">
             <label class="switch">
               <input id="check" type="checkbox" />
               <span class="slider round"></span>
             </label>
-          </div>
+          </div> -->
           <div class="screen">
             <h2 id="feedback"></h2>
             <div class="expression">
               <h1 id="question"></h1>
-              <input id="input" />
+              <input type="number" id="input" />
             </div>
           </div>
           <div>
