--- a/index.html
+++ b/index.html
@@ -9,116 +9,7 @@
   <body>
     <main>
       <div class="main">
-        <!-- <div class="table">
-          <table class="multTable" id="table">
-            <tr>
-              <th>*</th>
-              <th>2</th>
-              <th>3</th>
-              <th>4</th>
-              <th>5</th>
-              <th>6</th>
-              <th>7</th>
-              <th>8</th>
-              <th>9</th>
-            </tr>
-            <tr>
-              <th>2</th>
-              <td>4</td>
-              <td>6</td>
-              <td>8</td>
-              <td>10</td>
-              <td>12</td>
-              <td>14</td>
-              <td>16</td>
-              <td>18</td>
-            </tr>
-            <tr>
-              <th>3</th>
-              <td>6</td>
-              <td>9</td>
-              <td>12</td>
-              <td>15</td>
-              <td>18</td>
-              <td>21</td>
-              <td>24</td>
-              <td>27</td>
-            </tr>
-            <tr>
-              <th>4</th>
-              <td>8</td>
-              <td>12</td>
-              <td>16</td>
-              <td>20</td>
-              <td>24</td>
-              <td>28</td>
-              <td>32</td>
-              <td>36</td>
-            </tr>
-            <tr>
-              <th>5</th>
-              <td>10</td>
-              <td>15</td>
-              <td>20</td>
-              <td>25</td>
-              <td>30</td>
-              <td>35</td>
-              <td>40</td>
-              <td>45</td>
-            </tr>
-            <tr>
-              <th>6</th>
-              <td>12</td>
-              <td>18</td>
-              <td>24</td>
-              <td>30</td>
-              <td>36</td>
-              <td>42</td>
-              <td>48</td>
-              <td>54</td>
-            </tr>
-            <tr>
-              <th>7</th>
-              <td>14</td>
-              <td>21</td>
-              <td>28</td>
-              <td>35</td>
-              <td>42</td>
-              <td>49</td>
-              <td>56</td>
-              <td>63</td>
-            </tr>
-            <tr>
-              <th>8</th>
-              <td>16</td>
-              <td>24</td>
-              <td>32</td>
-              <td>40</td>
-              <td>48</td>
-              <td>56</td>
-              <td>64</td>
-              <td>72</td>
-            </tr>
-            <tr>
-              <th>9</th>
-              <td>18</td>
-              <td>27</td>
-              <td>36</td>
-              <td>45</td>
-              <td>54</td>
-              <td>63</td>
-              <td>72</td>
-              <td>81</td>
-            </tr>
-          </table>
-        </div> -->
         <div class="wrapper">
-          <!-- <div class="checking">
-            <label class="switch">
-              <input id="check" type="checkbox" />
-              <span class="slider round"></span>
-            </label>
-          </div> -->
           <div class="screen">
             <h2 id="feedback"></h2>
             <div class="expression">
@@ -143,6 +34,16 @@
         </div>
       </div>
     </main>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LWVL5SYGLD"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-LWVL5SYGLD');
+    </script>
 
     <script src="app.js"></script>
   </body>
