add answer counter

--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uz">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sonlar.uz</title>
+    <meta name="description" content="Sonlar.uz - Hisoblash tezligingizni oshiring!">
+    <meta name="keywords" content="sonlar, matematik misollar, arifmetika, algebra, raqamlar, matematik ma'lumotlar">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="AbsattarovDev">
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <main>
       <div class="main">
         <div class="wrapper">
+          <div class="counter">
+            <span class="true">0</span>
+            <span class="false">0</span>
+          </div>
           <div class="screen">
             <h2 id="feedback"></h2>
             <div class="expression">
