add keyboard(keys) functionality

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sonlar.uz</title>
-    <meta name="description" content="Sonlar.uz - Hisoblash tezligingizni oshiring!">
-    <meta name="keywords" content="sonlar, matematik misollar, arifmetika, algebra, raqamlar, matematik ma'lumotlar">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="AbsattarovDev">
+    <meta
+      name="description"
+      content="Sonlar.uz - Hisoblash tezligingizni oshiring!"
+    />
+    <meta
+      name="keywords"
+      content="sonlar, matematik misollar, arifmetika, algebra, raqamlar, matematik ma'lumotlar"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="AbsattarovDev" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -29,7 +35,7 @@
             <button id="checkBtn" type="button">Tekshirish</button>
           </div>
           <div class="keyboard">
-            <button class="active" id="all">2-9</button>
+            <button class="key" id="all">2-9</button>
             <button class="keys" id="two">2</button>
             <button class="keys" id="three">3</button>
             <button class="keys" id="four">4</button>
@@ -44,13 +50,18 @@
     </main>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LWVL5SYGLD"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-LWVL5SYGLD"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'G-LWVL5SYGLD');
+      gtag("config", "G-LWVL5SYGLD");
     </script>
 
     <script src="app.js"></script>
