--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="AbsattarovDev" />
+    <link
+      rel="shortcut icon"
+      href="./icons/s-favicon.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Sonlar.uz</title>
   </head>
