--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       href="./icons/s-favicon.png"
       type="image/x-icon"
     />
+    <link rel="manifest" href="/manifest.json" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Sonlar.uz</title>
   </head>
